<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin_1"
    android:paddingBottom="@dimen/activity_vertical_margin_1"
    android:background="#F5CB5C">
    <!-- F5CB5C #FCE196  #ED6B69 FCE196-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/station" android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/privteEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff"/>

            <EditText
                android:id="@+id/privatePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff"
                android:textStyle="bold"
                tools:targetApi="jelly_bean_mr1" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff"/>

            <Button
                android:id="@+id/privteSignin"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#242423" />

            <Button
                android:id="@+id/PrivateSignup"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:focusable="true"
                android:onClick="goTOPrivatRegisterPage"
                android:padding="16dp"
                android:text="انشاء حساب"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="forgetPassword"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="#242423"
                android:text="نسيت كلمة المرور"
                android:gravity="center"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>