<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    app:ignore="NamespaceTypo"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="126dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/dogimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    card_view:srcCompat="@mipmap/ic_launcher_round" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="90dp"
                >

                <TextView
                    android:textDirection="locale"
                    android:id="@+id/nameTxt"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/button4"
                    android:layout_alignLeft="@+id/button4"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/button4"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/dogimage"
                    android:layout_toLeftOf="@+id/dogimage"
                    android:layout_toRightOf="@+id/dogimage"
                    android:text="@string/nameoft"
                    android:layout_marginBottom="2dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="100dp"
                >

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dogimage"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@+id/numrating"
                    android:layout_toStartOf="@+id/numrating"
                    android:numStars="5"
                    android:progressTint="#ffdb4d"
                    android:rating="4"
                    android:stepSize="0"
                    android:layout_toLeftOf="@+id/numrating" />

                <TextView
                    android:id="@+id/numrating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_alignBottom="@+id/ratingBar"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="16dp"
                    android:text="300" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="128dp"
                android:layout_height="33dp"
                android:layout_marginTop="41dp"
                android:layout_marginRight="108dp"
                android:layout_marginLeft="7dp"
                >
                <TextView
                    android:textDirection="locale"
                    android:id="@+id/cusin"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"

                    android:layout_marginStart="8dp"
                    android:layout_alignRight="@+id/nameTxt"
                    android:layout_alignTop="@+id/imageView2"
                    android:layout_toRightOf="@+id/imageView2"
                    android:layout_toStartOf="@+id/imageView2"
                    android:text="@string/nameofc"
                    android:textAlignment="center"
                    android:layout_toLeftOf="@+id/imageView2"
                    android:layout_marginLeft="8dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="10pt"
                    android:layout_height="10pt"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="33dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="0"


                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginTop="41dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="236dp"
                android:layout_marginLeft="22dp"
                android:layout_alignRight="@id/imageView2"
                app:ignore="NotSibling">

                <Button

                    android:id="@+id/button4"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_above="@+id/ratingBar"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_signup"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/fllow"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>



</android.support.v7.widget.CardView>